[package]
name = "ash_learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version="*",features=["linked"]}
winit = "*"
env_logger = "*"
log = "*"
shaderc = "*"
bytemuck = { version = "*", features = [ "derive" ] }
image = "*"
imagesize = "0.12"